// Code generated by template. DO NOT EDIT.
syntax = "proto3";

package receiptproductpb;

import "google/api/annotations.proto";

option go_package = "./receiptproductpb";

message Model {
  uint64 id = 1;
  uint64 productID = 2;
  uint64 receiptID = 3;
  int32 price = 4;
  double quantity = 5;
  int32 sum = 6;
}

message GetListRequest {
  int32 page_size = 1;
  int32 page = 2;
  string sort_by = 3;
  string sort_order = 4;
  // filters
  uint64 productID = 5;
  uint64 receiptID = 6;
  int32 price_gt = 7;
  int32 price_lt = 8;
  double quantity_gt = 9;
  double quantity_lt = 10;
  int32 sum_gt = 11;
  int32 sum_lt = 12;
}

message GetListResponse {
  int64 total = 1;
  repeated Model items = 2;
}

message GetItemRequest {
  uint64 id = 1;
}

message GetItemResponse {
  Model item = 1;
}

message CreateItemRequest {
  Model item = 1;
}

message CreateItemResponse {
  Model item = 1;
}

message UpdateItemRequest {
  uint64 id = 1;
  Model item = 2;
}

message UpdateItemResponse {
  Model item = 1;
}

message DeleteItemRequest {
  uint64 id = 1;
}

message DeleteItemResponse {
}

service ModelService {
  rpc GetList (GetListRequest) returns (GetListResponse) {
    option (google.api.http) = {
      get: "/api/v1/receiptsproducts"
    };
  }
  rpc GetItem (GetItemRequest) returns (GetItemResponse) {
    option (google.api.http) = {
      get: "/api/v1/receiptsproducts/{id}"
    };
  }
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receiptsproducts"
      body: "item"
    };
  }
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      post: "/api/v1/receiptsproducts/{id}"
      body: "item"
    };
  }
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
    option (google.api.http) = {
      delete: "/api/v1/receiptsproducts/{id}"
    };
  }
}
